--- a/locale/pt_BR/manager.po
+++ b/locale/pt_BR/manager.po
@@ -17,6 +17,9 @@ msgstr ""
 msgid "manager.distribution.access"
 msgstr "Acesso"
 
+msgid "submissions.filter.state"
+msgstr "Por estado (UF)"
+
 msgid "manager.distribution.copyrightYearBasis.description"
 msgstr "Escolha como uma data padrão de direitos autorais é selecionada para um artigo. Esse padrão pode ser substituído caso a caso. Se você \"publica conforme avança\", não use a data de publicação da edição."
 
